# diffusion-experiments

./: .gitignore  EMA.ipynb  README.md  Visualising Score & Schedules.ipynb  environment.yaml  global_posterior.ipynb  index.html  pyproject.toml  visualising_schedules.py
case_study1/: 01_generate_data.py  02_train_models.py  abc_inverse_kinematics.py  ema_callback.py  generate_data.py  helper_visualize.py  inverse_kinematics.py  load_results_benchmark.py  model_settings_benchmark.py  playground.ipynb  plot_results.ipynb  run_benchmark.py  train_models.py  visualize_results.py
case_study1b/: benchmark.py  c2st_benchmark_results.csv  load_results_benchmark.py  model_settings_benchmark.py  run_benchmark.py  visualize_results.ipynb  visualize_results.py
case_study2/: ema_callback.py  helper_pypesto.py  helper_visualize.py  load_mcmc_samples.py  model_settings.py  petab_benchmark.ipynb  petab_benchmark.py  petab_benchmark_figures.py  petab_helper.py  run_diffusion_models.py  run_mcmc.py  visualize_results.py
case_study3/: 01_train_models.py  01_train_models_like.py  01_train_models_post.py  TODO.txt  cnn.py  down_block.py  eval_c2st_field_inference.py  eval_metrics_samples_figure12.ipynb  padded_unet.py  playground_like.ipynb  playground_post.ipynb  resnet.py  summary_like.csv  summary_post.csv  train_models_field_inference.py  train_models_like.py  train_models_parameter_inference.py  train_models_post.py  up_block.py
case_study4/: complete_pooling.ipynb  complete_pooling.py  create_figure.py  create_visuals.ipynb  ddm_simulator.py  ddm_vis.ipynb  no_and_complete_pooling.ipynb  no_and_complete_pooling.py  partial_pooling.ipynb  partial_pooling.py  partial_pooling_standard.ipynb  settings.py
case_study5/: TODO.txt  generate_testset_multiplestream.py  generate_trainingset.py  generate_trainingset_galax.py  pal5.py  partial_pooling.py  settings.py  stream_simulator.py  (+4 more)
(+16 files in other folders)
